--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
         "api/**/*.php": { runtime: "vercel-php@0.6.0" },
     },
     "routes": [
-        { src: "/(.*)", dest: "/public/index.php" }
+        { src: "/(.*)", dest: "/public/index.php" },
         { "src": "/app/routes.php", "dest": "/app/routes.php" },
         { "src": "index.html", "dest": "index.html" }]
-    ],
 }
